--- a/flaskr/templates/auth/register.html
+++ b/flaskr/templates/auth/register.html
@@ -9,7 +9,8 @@
     <label for="username">usuario</label>
     <input name="username" id="username" required>
     <label for="password">contraseña</label>
-    <input type="password" name="password" id="password" required>
+    <label for="verifPass">contraseña</label>
+    <input type="password" name="verifPass" id="password" required>
     <input type="submit" value="registrarse">
   </form>
 {% endblock %}
